# go-vtracer

./: .gitignore  Cargo.toml  Makefile  README.md  README.zh.md  build.sh  example_test.go  go.mod  vtracer.go
.cursor/rules/: rule.mdc
.github/workflows/: build-release.yml
cmd/install/: install.go
examples/advanced/: advanced_convert.go  go.mod
examples/batch/: batch_convert.go  go.mod
examples/demo/: demo.go  go.mod
examples/simple/: go.mod  simple_convert.go
examples/web/: go.mod  http_server.go
lib/: libvtracer_go.dylib  libvtracer_go_darwin_amd64.dylib  libvtracer_go_darwin_arm64.dylib
scripts/: build-releases.sh
src/: lib.rs
