[package]
name = "vtracer-go-binding"
version = "0.1.0"
edition = "2021"
description = "Go binding for vtracer - image vectorization library"

[lib]
name = "vtracer_go"
crate-type = ["cdylib"]

[dependencies]
vtracer = { git = "https://github.com/visioncortex/vtracer.git", version = "0.6" }
visioncortex = "0.8.8"
image = "0.23.10"
fastrand = "1.8"
